--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -108,7 +108,7 @@
                         </tr>
                         <tr>
                             <td colspan="5">
-                                <a href="/checkout/" class="btn btn-warning ml-2 float-right">Proceed to
+                                <a href="/checkout" class="btn btn-warning ml-2 float-right">Proceed to
                                     checkout
                                 </a>
                                 <a href="{% url 'core:home' %}" class="btn btn-primary float-right">Continue
